Second attempt to fix Nav position on iPhone.

--- a/assets/css/narrow.css
+++ b/assets/css/narrow.css
@@ -1,5 +1,7 @@
 nav {
-    margin: auto 0;
+    margin: 0;
+    padding: 20px 0;
+    width: 200px;
 }
 
 header,
